Update README.md and provincie.hmtl

--- a/italy/provinciali/provincie.html
+++ b/italy/provinciali/provincie.html
@@ -109,7 +109,7 @@
 		 html +='<table class ="table" >'
                   +'<thead>'
                   +'<tr>'
-				  +'<th scope="col" colspan="100%">Andamento Regionale dei dati del Coronavirus</th>'
+				  +'<th scope="col" colspan="100%">Andamento Provinciale dei dati del Coronavirus</th>'
 				  +'</tr>'                 
 				  +'<tr>'
 				  +'<th scope="col">ID</th>'
